--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,41 @@
+aiodns==3.0.0
+aiohttp==3.8.4
+aiosignal==1.3.1
+altgraph @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/altgraph-0.17.2-py2.py3-none-any.whl
+async-timeout==4.0.2
+attrs==23.1.0
 beautifulsoup4==4.12.2
 blinker==1.6.2
+ccxt==4.0.3
 certifi==2023.5.7
+cffi==1.15.1
 charset-normalizer==3.2.0
 click==8.1.4
+cryptography==41.0.1
+diff-tool==3.0.0
+exceptiongroup==1.1.1
 Flask==2.3.2
+Flask-Cors==4.0.0
+frozenlist==1.3.3
+future @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/future-0.18.2-py3-none-any.whl
 idna==3.4
 importlib-metadata==6.8.0
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+macholib @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/macholib-1.15.2-py2.py3-none-any.whl
 MarkupSafe==2.1.3
+multidict==6.0.4
+packaging==23.1
+pluggy==1.2.0
+pycares==4.3.0
+pycparser==2.21
+pytest==7.3.2
 requests==2.31.0
+six @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/six-1.15.0-py2.py3-none-any.whl
 soupsieve==2.4.1
+tomli==2.0.1
 urllib3==2.0.3
 Werkzeug==2.3.6
+yarl==1.9.2
 zipp==3.15.0
